--- a/index.html
+++ b/index.html
@@ -9,20 +9,28 @@
 <body>
     <header>
         <nav>
+            <a id="nombreheader">Nicole Aranda</a>
             <a href="#web">I n i c i o</a>
             <a href="#sobre-mi">S o b r e m i</a>
         </nav>
     </header>
     <div class="Contenido">
+        <img id="yoLara" src="Imagenes/yo lara.png">
         <div class="NICOLE ARANDA">
     <h1 id="web"> W E B - D E V E L O P E R </h1>
     <h2 id="nombre"> NICOLE ARANDA  </h2>
     </div>
     <div class="presentacion">
      <img  src="Imagenes/1000148582.jpg" class="fotonicole" alt="fotonicole">
-    <p id="sobre-mi"> Hola! Soy una desarrolladora web en formación,<br> Vivo en Uruguay en el departamento de San José,<br> actualmente estudio desarrollo web en <strong> JAP </strong>;<br> soy una apasionada por los videojuegos y su arte. <br>Me gusta que mis paginas sean creativas y atrapantes!<br> Como artista también disfruto ser parte del diseño<br> de la página y poder darle un toque personal con recursos<br> hechos por mi. Si buscabas creatividad y una página segura y genial.. Aqui estoy! 
+    <p id="sobre-mi"> Soy una desarrolladora web en formación,<br> Vivo en Uruguay en el departamento de San José,<br> actualmente estudio desarrollo web en <strong> JAP </strong>;<br> soy una apasionada por los videojuegos y su arte. <br>Me gusta que mis paginas sean creativas y atrapantes!<br> Como artista también disfruto ser parte del diseño<br> de la página y poder darle un toque personal con recursos<br> hechos por mi. Si buscabas creatividad y una página segura y genial.. Aqui estoy! 
     </p>
     </div>
+    <div id="hoja2">
+<h3 id="skills"> Skills: </h3>
+    <p id="Html"><img> HTML</p>
+    <p id="Css"><img>CSS</p>
+  <p id="js"> <img>JavaScript</p>
+</div>
 </div>
 </body>
 </html>
